# curso-python-cac

./: .gitignore  README.md  pyproject.toml
02 Objetos y Estructuras de Datos/: 01 Números.ipynb  02 Strings.ipynb  03 Listas.ipynb  04 Diccionarios.ipynb  05 Tuplas.ipynb  06 Sets y Booleans.ipynb  07 Assessment Test Objetos y Estructuras de Datos.ipynb  07 IO files.ipynb  08 Assessment Test Objetos y Estructuras de Datos.ipynb  test.txt  test_2.txt
03 Programación Procedimental/: 01 Declaraciones condicionales.ipynb  02 Declaraciones condicionales.ipynb  02 Iteración con while.ipynb  03 Loops for.ipynb  04 Built-in Functions.ipynb  04 Loops for.ipynb  05 List Comprehensions.ipynb  06 Assessment Test Flujos de Control y Trabajo.ipynb
04 Programación Funcional/: 01 Funciones.ipynb  03 Ejercicios Prácticos de Funciones.ipynb  05 Expresiones Lambda, Map & Filter..ipynb  06 Namespaces & Scope en Python.ipynb  07 args & kwargs.ipynb  08 Decoradores.ipynb  09 Functools.ipynb  10 Ejercicios Prácticos Funciones 2.ipynb
05 Programación Orientada a Objetos/: 01 Programación Orientada a Objetos.ipynb  02 Ejercicio POO.ipynb
06 Módulos y Paquetes/: 01 Módulos y Paquetes .ipynb  modulo_test.py  script_test.py  script_test_2.py
07 Gestión de Dependencias/: 01 Gestión de dependencia.ipynb
07 Gestión de Dependencias/cac-poetry/: pyproject.toml
07 Gestión de Dependencias/cac-poetry/tests/: test_cac_poetry.py
08 Funcionalidades Avanzadas/: 01 Exceptions en Python.ipynb  02 Logging.ipynb  03 Testing con Pytest.ipynb  04 Python CLI.ipynb  ls_argparse.py  ls_argparse_2.py  ls_argv.py  test_utils.py  utils.py  verificar_utils.py  verificar_utils_2.py
09 Git y Github/: 01 Git y Github.ipynb
10. Estadística Descriptiva/: 01 Estadística Descriptiva.ipynb
11 Data Análisis - Pandas/: 01 Series.ipynb  02 DataFrame I.ipynb  03 DataFrame II.ipynb  04 DataFrame III.ipynb  05 DataFrame IV.ipynb  06 Ejercicios Pandas.ipynb  ejemplo.csv
12 Data Análisis - Matplotlib/: 01 Introducción a MatPlotLib .ipynb  02 Seaborn - Distribution Plots.ipynb  03 Seaborn - Categorical Plots.ipynb  04 Seabor - Matrix Plots.ipynb  05 Ejercicio Aálisis de Datos Matplotlib Seaborn.ipynb
13 Introducción scikit learn - Modelos de Regresión/: 01 Regresión Lineal.ipynb  02 Model Pipelines.ipynb  NewspaperChurn new version.xlsx
14 BBDD/: 01 Intro a Bases de Datos.ipynb  02 ORMs.ipynb  03 Crear Tablas.ipynb  04 Crear registros.ipynb  05 Leer registros.ipynb  (+1 more)
(+22 files in other folders)
