[tool.poetry]
name = "curso-python-cac"
version = "0.1.0"
description = "Material del curso de programación en Python del Colegio de Actuarios de Cataluña"
authors = ["HeberTU <heber.trj.urt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nbstripout = "^0.6.1"
notebook = "^6.5.2"
requests = "^2.28.2"
loguru = "^0.6.0"
pytest = "^7.2.1"
pandas = "^1.5.3"
openpyxl = "^3.0.10"
scipy = "1.6.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
feature-engine = "^1.5.2"
imblearn = "^0.0"
xgboost = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
