[tool.poetry]
name = "cac-poetry"
version = "0.1.0"
description = ""
authors = ["HeberTU <heber.trujillo@glovoapp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
beautifulsoup4 = "4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
